--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Prime\AppData\Local\Temp\testng-eclipse--1295399170\testng-customsuite.xml</span>
+                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse--625147220\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
+                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -104,7 +104,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestRunner.Runner" class="method navigator-link" hash-for-method="runScenario(&quot;Validate ProductPage Functionality&quot;, &quot;Sauce Demo Application&quot;)">runScenario("Validate ProductPage Functionality", "Sauce Demo Application")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="TestRunner.Runner" class="method navigator-link" hash-for-method="runScenario(&quot;Validate PersonalPage Functionality&quot;, &quot;Sauce Demo Application&quot;)">runScenario("Validate PersonalPage Functionality", "Sauce Demo Application")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -119,6 +119,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="TestRunner.Runner" class="method navigator-link" hash-for-method="runScenario(&quot;Validate LoginPage Functionality&quot;, &quot;Sauce Demo Application&quot;)">runScenario("Validate LoginPage Functionality", "Sauce Demo Application")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="TestRunner.Runner" class="method navigator-link" hash-for-method="runScenario(&quot;Validate ProductPage Functionality&quot;, &quot;Sauce Demo Application&quot;)">runScenario("Validate ProductPage Functionality", "Sauce Demo Application")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -141,25 +146,25 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Validate ProductPage Functionality&quot;, &quot;Sauce Demo Application&quot;)">
-                  </a> <!-- runScenario("Validate ProductPage Functionality", "Sauce Demo Application") -->
+                  <a name="runScenario(&quot;Validate PersonalPage Functionality&quot;, &quot;Sauce Demo Application&quot;)">
+                  </a> <!-- runScenario("Validate PersonalPage Functionality", "Sauce Demo Application") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Validate ProductPage Functionality", "Sauce Demo Application")</span>
-                  <div class="stack-trace">io.cucumber.testng.UndefinedStepException: The step &apos;user should sort the product as &quot;Price (high to low)&quot;&apos; and 2 other step(s) are undefined.
+                  <span class="parameters">("Validate PersonalPage Functionality", "Sauce Demo Application")</span>
+                  <div class="stack-trace">io.cucumber.testng.UndefinedStepException: The step &apos;user should click on checkout button&apos; and 2 other step(s) are undefined.
 You can implement these steps using the snippet(s) below:
 
-@When(&quot;user should sort the product as {string}&quot;)
-public void user_should_sort_the_product_as(String string) {
+@When(&quot;user should click on checkout button&quot;)
+public void user_should_click_on_checkout_button() {
     // Write code here that turns the phrase above into concrete actions
     throw new io.cucumber.java.PendingException();
 }
-@When(&quot;user should select {int} products&quot;)
-public void user_should_select_products(Integer int1) {
+@When(&quot;user should enter fname as {string} and lname as {string} and pcode as {string}&quot;)
+public void user_should_enter_fname_as_and_lname_as_and_pcode_as(String string, String string2, String string3) {
     // Write code here that turns the phrase above into concrete actions
     throw new io.cucumber.java.PendingException();
 }
-@Then(&quot;user should click on shopping Cart Trolly&quot;)
-public void user_should_click_on_shopping_cart_trolly() {
+@Then(&quot;user shold click on continue button&quot;)
+public void user_shold_click_on_continue_button() {
     // Write code here that turns the phrase above into concrete actions
     throw new io.cucumber.java.PendingException();
 }
@@ -172,10 +177,8 @@ public void user_should_click_on_shopping_cart_trolly() {
 	at io.cucumber.core.runtime.CucumberExecutionContext.runTestCase(CucumberExecutionContext.java:137)
 	at io.cucumber.testng.TestNGCucumberRunner.runScenario(TestNGCucumberRunner.java:129)
 	at io.cucumber.testng.AbstractTestNGCucumberTests.runScenario(AbstractTestNGCucumberTests.java:35)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
+	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
 	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
 	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
 	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
@@ -184,7 +187,7 @@ public void user_should_click_on_shopping_cart_trolly() {
 	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
 	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
 	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
 	at org.testng.TestRunner.privateRun(TestRunner.java:794)
 	at org.testng.TestRunner.run(TestRunner.java:596)
 	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
@@ -224,12 +227,22 @@ public void user_should_click_on_shopping_cart_trolly() {
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Validate ProductPage Functionality&quot;, &quot;Sauce Demo Application&quot;)">
+                  </a> <!-- runScenario("Validate ProductPage Functionality", "Sauce Demo Application") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Validate ProductPage Functionality", "Sauce Demo Application")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Prime\AppData\Local\Temp\testng-eclipse--1295399170\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse--625147220\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -286,20 +299,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'TestRunner.Runner')
-data.setCell(0, 3, 158);
+data.setCell(0, 3, 267);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
 data.setCell(1, 2, 'TestRunner.Runner')
-data.setCell(1, 3, 62);
+data.setCell(1, 3, 99);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'runScenario')
+data.setCell(2, 2, 'TestRunner.Runner')
+data.setCell(2, 3, 25);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 220 ms</span>
+              <span class="suite-total-time">Total running time: 391 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -327,22 +344,26 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">TestRunner.Runner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@5b057c8c)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@1cdc4c27)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("Validate LoginPage Functionality", "Sauce Demo Application")</span>
-                <span class="method-start">423 ms</span>
+                <span class="method-start">660 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Validate ProductPage Functionality", "Sauce Demo Application")</span>
+                <span class="method-start">942 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">runScenario("Validate ProductPage Functionality", "Sauce Demo Application")</span>
-                <span class="method-start">585 ms</span>
+                <span class="method-name">runScenario("Validate PersonalPage Functionality", "Sauce Demo Application")</span>
+                <span class="method-start">971 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">652 ms</span>
+                <span class="method-start">1076 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
